[FIX] Menu is always visible already, animations was included

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,10 +1,15 @@
 @use '../../globalStyles/vars';
 
 nav {
+  top: 0;
+  position: fixed;
+  width: calc(100% - 48px);
   display: flex;
   justify-content: space-between;
   padding: 0 24px;
+  background: white;
   border-bottom: 1px solid var(--very-light-pink);
+  z-index: 1;
 }
 .nav-menu {
   display: none;
