--- a/src/components/Menu/Menu.scss
+++ b/src/components/Menu/Menu.scss
@@ -1,4 +1,4 @@
-@use '../../globalStyles/vars';
+@use "../../globalStyles/vars";
 .desktop-menu {
   width: 100px;
   height: auto;
@@ -7,7 +7,9 @@
   padding: 20px 20px 0 20px;
   position: absolute;
   top: 60px;
-right: 50px;
+  right: 50px;
+  background: white;
+  position: fixed;
 }
 .desktop-menu ul {
   list-style: none;
@@ -34,4 +36,17 @@ right: 50px;
   text-decoration: none;
   margin-bottom: 20px;
   display: inline-block;
+}
+
+@keyframes swipeTop {
+	0% {
+		top: 0;
+  }
+  100% {
+		top: 60px;
+  }
+}
+
+.desktop-menu {
+		animation: swipeTop .36s ease;
 }
